[package]
name = "shtml"
version = "0.1.0"
edition = "2021"

description = "HTML at Compile-time. A lisp-like HTML templating language."
repository = "https://github.com/OgGhostJelly/mal"
keywords = ["cli", "web", "html", "tool", "template"]
categories = ["command-line-utilities", "template-engine"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["display"] }
indexmap = "2.10.0"
notify-debouncer-full = "0.6.0"
rustyline = "16.0.0"
thiserror = "2.0.12"
unicode_reader = "1.0.2"
